--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,22 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@import url('https://fonts.googleapis.com/css2?family=Paytone+One&display=swap');
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
+@layer base {
   html {
-    color-scheme: dark;
+    font-family: 'Paytone One', sans-serif;
   }
-  body {
-    color: white;
-    background: black;
-  }
+}
+
+::selection {
+  background-color: violet;
+  color: #fefefe;
+}
+
+html {
+  @apply text-gray-100 bg-gradient-to-r from-[#41295a] to-[#2F0743];
+  min-width: 360px;
+  scroll-behavior: smooth;
 }
