--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,3 +20,18 @@ html {
   min-width: 360px;
   scroll-behavior: smooth;
 }
+.swiper-container {
+  width: 480px;
+}
+
+@media screen and (min-width: 640px) {
+  .swiper-container {
+    width: 640px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .swiper-container {
+    width: 768px;
+  }
+}
